[gd_scene load_steps=9 format=3 uid="uid://15s2ylcxyhqm"]

[ext_resource type="Script" uid="uid://2dl0yrre4lqq" path="res://Scripts/Menus/Main/abilitybutton.gd" id="1_kga4m"]
[ext_resource type="Shader" uid="uid://bcwmir5oxi3di" path="res://Sprites/Shaders/colorOverwrite.gdshader" id="2_ap0rd"]
[ext_resource type="Texture2D" uid="uid://nijf1v28d5le" path="res://Sprites/Abilities/holderOfPlaces.png" id="3_wns0p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s60w3"]
resource_local_to_scene = true
shader = ExtResource("2_ap0rd")
shader_parameter/hue = 0.0
shader_parameter/saturation = 0.0
shader_parameter/value = 0.0
shader_parameter/exposure = 0.5

[sub_resource type="Animation" id="Animation_e3kcf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_js3d6"]
resource_name = "hovering"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_uicdo"]
resource_name = "releasing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nggo"]
_data = {
&"RESET": SubResource("Animation_e3kcf"),
&"hovering": SubResource("Animation_js3d6"),
&"releasing": SubResource("Animation_uicdo")
}

[node name="abilityButton" type="Control"]
custom_minimum_size = Vector2(100, 130)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 100.0
offset_bottom = -545.0
grow_vertical = 2
script = ExtResource("1_kga4m")

[node name="cdTimer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
pivot_offset = Vector2(32, 32)

[node name="Display" type="TextureRect" parent="Button"]
material = SubResource("ShaderMaterial_s60w3")
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
texture = ExtResource("3_wns0p")
expand_mode = 1

[node name="animations" type="AnimationPlayer" parent="Button"]
libraries = {
&"": SubResource("AnimationLibrary_5nggo")
}

[node name="Prompt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = -16.0
offset_right = 40.0
offset_bottom = 7.0
grow_horizontal = 2
text = "key"
horizontal_alignment = 1
uppercase = true

[node name="Cooldown" type="Label" parent="."]
layout_mode = 1
offset_top = 24.0
offset_right = 50.0
offset_bottom = 47.0
scale = Vector2(2, 2)
text = "100"
horizontal_alignment = 1

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 88.0
offset_right = 40.0
offset_bottom = 111.0
grow_horizontal = 2
text = "Name"
horizontal_alignment = 1

[connection signal="timeout" from="cdTimer" to="." method="_end_cooldown"]
[connection signal="mouse_entered" from="Button" to="." method="_focused"]
[connection signal="mouse_exited" from="Button" to="." method="_unfocused"]
[connection signal="pressed" from="Button" to="." method="_on_pressed"]
